--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pannellum": "^2.5.6",
     "vue": "^3.2.13",
+    "vue-pannellum": "^0.5.3",
+    "vue-router": "^4.2.1",
     "vue3-video-play": "^1.3.1-beta.6"
   },
   "devDependencies": {
