--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/shared": "^3.3.4",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.5",
     "pannellum": "^2.5.6",
     "vue": "^3.2.13",
     "vue-pannellum": "^0.5.3",
@@ -36,7 +38,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
