--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/shared": "^3.3.4",
+    "aframe": "^1.4.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.5",
     "pannellum": "^2.5.6",
@@ -24,7 +25,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.2.0"
   },
   "eslintConfig": {
     "root": true,
