--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@vue/shared": "^3.3.4",
     "aframe": "^1.4.2",
-    "core-js": "^3.8.3",
+    "core-js": "^3.23.3",
     "element-plus": "^2.3.5",
     "pannellum": "^2.5.6",
+    "pinia": "^2.0.36",
     "vue": "^3.2.13",
+    "vue-demi": "^0.14.5",
     "vue-pannellum": "^0.5.3",
     "vue-router": "^4.2.1",
     "vue3-video-play": "^1.3.1-beta.6"
