--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.22.10",
-    "sass-loader": "^7.2.0"
+    "sass-loader": "^7.2.0",
+    "typescript": "^5.5.2"
   },
   "eslintConfig": {
     "root": true,
