fix: 修复拖拽添加模型定位不准的问题，增加缩略图，优化样式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,8 +41,9 @@
         "packages/**/*.ts",
         "src/**/*.ts",
         "src/**/*.tsx",
-        "src/**/*.vue"
-, "src/router/index.js"    ],
+        "src/**/*.vue",
+        "src/router/index.js"
+    ],
     "exclude": [
         "node_modules",
         "src/**/*.js",
