--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pannellum": "^2.5.6",
     "pinia": "^2.0.36",
+    "three": "^0.168.0",
     "vue": "^3.2.13",
     "vue-demi": "^0.14.5",
     "vue-pannellum": "^0.5.3",
