--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aframe": "^1.4.2",
     "cesium": "^1.105.2",
     "core-js": "^3.23.3",
+    "echarts": "^5.5.1",
     "element-plus": "^2.3.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pannellum": "^2.5.6",
