--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@kjgl77/datav-vue3": "^1.7.4",
     "@turf/turf": "^7.0.0",
     "@vue/shared": "^3.3.4",
-    "aframe": "^1.4.2",
     "cesium": "^1.105.2",
     "core-js": "^3.23.3",
     "echarts": "^5.5.1",
